Added basic loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
 <body>
     <canvas class="webgl"></canvas>
 
+    <div class="spaceman"><img src="./img/spaceman.png"></div>
+
+    <div class="loading-bar"></div>
+
+    <div class="loading-text">Loading</div>
+
     <section class="section">
     </section>
     <section class="section">
